--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container mt-4">
         <h2>Task Manager</h2>
-        <div class="input-group mb-3">
+        <div class="input-group mb-3 w-50">
             <input type="text" id="input" class="form-control" placeholder="Enter Task">
             <button class="btn btn-success" id="add-btn">Add Task</button>
         </div>
@@ -38,7 +38,7 @@
             const taskText = inputField.value.trim();
             if (taskText !== "") {
                 const li = document.createElement("li");
-                li.className = "list-group-item d-flex justify-content-between align-items-center";
+                li.className = "list-group-item d-flex justify-content-between align-items-center w-50";
                 li.textContent = taskText;
 
                 const deleteButton = document.createElement("button");
